--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="author" content="Crayon'd">
 
-    <title>Crayon'd | xacro</title>
+    <title>Xacro Rental Vacation Stays</title>
     <meta name="description"
         content="We strive to create tech products that are fast, easy to use, bug-free, secure, and can grow with your needs.">
     <link rel="canonical" href="https://www.crayond.com" />
@@ -77,9 +77,9 @@
                 </div>
 
                 <div class="rotate_Button">
-                    <div class="rotate_image">
-                        <img alt="rotate" src="./assets/images/Property2.png">
-                    </div>
+                    <!-- <div class="rotate_image"> -->
+                        <img alt="rotate" class="rotate_image" src="./assets/images/Property2.png">
+                    <!-- </div> -->
                     <button class="wait_listButton" onclick="">
                         <span>Join Waitlist</span>
                     </button>
@@ -94,7 +94,7 @@
                     <p style="margin: 0">Let's calculate your returns</p>
                 </div>
                 <div class="calculate_2">
-                    <p style="margin: 0">A new age investment modal, better than your option</p>
+                    <p style="margin: 0">A new age investment model, better than your regular options</p>
                 </div>
                 <div class="parent">
                 <div class="card_parent">
@@ -126,10 +126,9 @@
                                 <p class="amount">₹ 10,00,000</p>
                             </div>
                             <div class="investing_slider">
-
+                                <!-- <div class="value_slider"></div> -->
                                 <input type="range" onchange="handleChangeInvesting" class="investing_slider_range" min="0" max="100" value="60" step="5">
                                 <!-- list="values" -->
-                                <!-- <span class="value_slider"></span> -->
 
                                 <datalist class="option" id="values">
                                     <option value="0" label="5 L"></option>
@@ -376,8 +375,8 @@
                 </div>
             </div>
 
-            <img alt="footer_1" class="footer_img_1" src="./assets/images/footer_1.png">
-            <img alt="footer_2" class="footer_img_2" src="./assets/images/Vector.png">
+            <img alt="footer_1" class="footer_img_1" src="./assets/images/footer_1.svg">
+            <img alt="footer_2" class="footer_img_2" src="./assets/images/Vector.svg">
 
         </section>
 
