--- a/index.html
+++ b/index.html
@@ -281,42 +281,42 @@
                       <datalist class="option" id="values">
                         <option
                           value="0"
-                          label="1yrs"
+                          label="1 Yrs"
                           style="color: ''"
                         ></option>
                         <option
                           value="1"
-                          label="2yrs"
+                          label="2 Yrs"
                           style="color: ''"
                         ></option>
                         <option
                           value="2"
-                          label="3yrs"
+                          label="3 Yrs"
                           style="color: ''"
                         ></option>
                         <option
                           value="3"
-                          label="14yrs"
+                          label="14 Yrs"
                           style="color: #0088ff"
                         ></option>
                         <option
                           value="4"
-                          label="5yrs"
+                          label="5 Yrs"
                           style="color: ''"
                         ></option>
                         <option
                           value="5"
-                          label="6yrs"
+                          label="6 Yrs"
                           style="color: ''"
                         ></option>
                         <option
                           value="6"
-                          label="7yrs"
+                          label="7 Yrs"
                           style="color: ''"
                         ></option>
                         <option
                           value="7"
-                          label="8yrs"
+                          label="8 Yrs"
                           style="color: ''"
                         ></option>
                       </datalist>
@@ -325,27 +325,27 @@
                       <datalist class="option" id="values">
                         <option
                           value="0"
-                          label="0yrs"
+                          label="0 Yrs"
                           style="color: ''"
                         ></option>
                         <option
                           value="1"
-                          label="2yrs"
+                          label="2 Yrs"
                           style="color: ''"
                         ></option>
                         <option
                           value="3"
-                          label="4yrs"
+                          label="4 Yrs"
                           style="color: #0088ff"
                         ></option>
                         <option
                           value="5"
-                          label="6yrs"
+                          label="6 Yrs"
                           style="color: ''"
                         ></option>
                         <option
                           value="7"
-                          label="8yrs"
+                          label="8 Yrs"
                           style="color: ''"
                         ></option>
                       </datalist>
