--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                     <div class="value_slider" id="value_performance" style="width:0%;" ></div>
                     <input
                       type="range"
-                      class="performance_range"
+                      class="investing_slider_range"
                       min="0"
                       max="100"
                       value="0"
@@ -270,7 +270,7 @@
                     <div class="value_slider" id="value_investmentYear" style="width: 0%;"></div>
                     <input
                       type="range"
-                      class="investing_year_range"
+                      class="investing_slider_range"
                       min="0"
                       max="100"
                       value="0"
